--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-      <div class="page secondary">
+      <div class="page">
           <div class="page-header">
               <div class="page-header-content">
                     <!--<a id="forkme_banner" href="https://github.com/Fruitfactory/WSSQL_GUI">View on GitHub</a>-->
