--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="image-container bg-color-blue">
                     <img src="images/screenshots/standalone.png" />
                     <div class=overlay>
-                        Plugin in Outlook
+                        StandAlone application
                     </div>
                 </div> 
 
