--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
       <div class="page">
           <div class="page-header">
               <div class="page-header-content">
-                    <!--<a id="forkme_banner" href="https://github.com/Fruitfactory/WSSQL_GUI">View on GitHub</a>-->
-
                     <h1 id="project_title">WS Outlook Plugin</h1>
-                    <!--<section id="downloads">
-                        <a class="zip_download_link" href="https://github.com/Fruitfactory/WSSQL_GUI/zipball/master">Download this project as a .zip file</a>
-                        <a class="tar_download_link" href="https://github.com/Fruitfactory/WSSQL_GUI/tarball/master">Download this project as a tar.gz file</a>
-                    </section>-->
               </div>
           </div>
 
@@ -42,12 +36,23 @@
               <div class="page-region-content">
                 <h3>Welcome to GitHub Pages.</h3>
 
+                <div class="span6">
+                    <h2>Download</h2>
+                    <button class="image-button bg-color-blue fg-color-white" > ClickOnce <img src="images/Download.png" /> </button>
+                    <button class="image-button bg-color-blue fg-color-white" > ClickTwice <img src="images/Download.png" /> </button>
+                </div>
+
+                <h2>Screenshots</h2>
+
+
                 <div class="image-container bg-color-blue">
                     <img src="images/screenshots/ooutlookplugin.png" />
                     <div class=overlay>
                         Plugin in Outlook
                     </div>
                 </div> 
+
+
                 <div class="image-container bg-color-blue">
                     <img src="images/screenshots/standalone.png" />
                     <div class=overlay>
