--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/modern-responsive.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css">
 
-    <title>WS Outlook Plugin</title>
+    <title>Outlook Finder Plugin</title>
   </head>
 
   <body class="metrouicss">
@@ -19,7 +19,7 @@
         <div class="nav-bar">
             <div class="nav-bar-inner padding10">
                 <span class="element">
-                    Windows Search Outlook Plugin
+                    Outlook Finder Plugin
                 </span>
             </div>
         </div>
@@ -28,7 +28,7 @@
       <div class="page">
           <div class="page-header">
               <div class="page-header-content">
-                    <h1 id="project_title">WS Outlook Plugin</h1>
+                    <h1 id="project_title">Outlook Finder</h1>
               </div>
           </div>
 
@@ -69,7 +69,7 @@
         <div class="nav-bar">
             <div class="nav-bar-inner padding10">
                 <span class="element">
-                    WS Outlook Plugin gui maintained by Fruitfactory. Published with <a href="http://pages.github.com">GitHub Pages</a>
+                    Outlook Finder Plugin gui maintained by Fruitfactory. Published with <a href="http://pages.github.com">GitHub Pages</a>
                 </span>
             </div>
         </div>
