--- a/index.html
+++ b/index.html
@@ -1,80 +1,85 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Wssql gui : " />
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/modern.css">
-	<link rel="stylesheet" type="text/css" media="screen" href="stylesheets/modern-responsive.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css">
+    <meta name="description" content="Outlook Finder:" />
+    <link href="css/metro-bootstrap.css" rel="stylesheet">
+    <link href="css/metro-bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
+    <link href="js/prettify/prettify.css" rel="stylesheet">
 
+    <!-- Load JavaScript Libraries -->
+    <script src="js/jquery/jquery.min.js"></script>
+    <script src="js/jquery/jquery.widget.min.js"></script>
+    <script src="js/jquery/jquery.mousewheel.js"></script>
+    <script src="js/prettify/prettify.js"></script>
+
+    <!-- Metro UI CSS JavaScript plugins -->
+    <script src="js/metro/metro-loader.js"></script>
     <title>Outlook Finder Plugin</title>
-  </head>
+</head>
 
-  <body class="metrouicss">
+<body class="metro">
+    <header class="bg-dark" data-load="header.html"></header>
+    <div class="page">
+        <!--page begin-->
 
-
-      <div class="page">
-        <div class="nav-bar">
-            <div class="nav-bar-inner padding10">
-                <span class="element">
-                    Outlook Finder Plugin
-                </span>
-            </div>
-        </div>
-    </div>
-
-      <div class="page">
-          <div class="page-header">
-              <div class="page-header-content">
-                    <h1 id="project_title">Outlook Finder</h1>
-              </div>
-          </div>
-
-          <div class="page-region">
-              <div class="page-region-content">
-                <h3>Welcome to GitHub Pages.</h3>
-
-                <div class="span6">
-                    <h2>Download</h2>
-                    <button class="image-button bg-color-blue fg-color-white" > ClickOnce <img src="images/Download.png" /> </button>
-                    <button class="image-button bg-color-blue fg-color-white" > ClickTwice <img src="images/Download.png" /> </button>
+        <div class="grid container">
+            <div class="row">
+                <div class="bg-white">
+                    <div class="padding20 introduce bg-cyan">
+                        <h1 class="ntm text-center fg-white">Outlook Finder</h1>
+                    </div>
                 </div>
+
+            </div>
+
+            <div class="row">
+                <div class="span4 bg-red">
+                    <a class="span4 padding20 subheader text-center fg-white introduce_r downloadlink"
+                       href="http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/trial/1033/1.0.0/outlookfinder.exe">Trial version
+                       <span class="icon-download-2"></span>
+                    </a>
+                </div>
+                <div class="span4 bg-cyan text-center">
+                    <a class="span4 padding20 subheader text-center fg-white introduce_r downloadlink"
+                    href="buyversion.html">
+                        Buy version
+                    </a>
+                </div>
+            </div>
+
+            <div class="row border-top">
 
                 <h2>Screenshots</h2>
 
 
-                <div class="image-container bg-color-blue">
-                    <img src="images/screenshots/ooutlookplugin.png" />
-                    <div class=overlay>
+                <div class="row border-top image-container full-size">
+                    <img src="images/screenshots/ooutlookplugin.png" class="span12" />
+                    <div class="overlay">
                         Plugin in Outlook
                     </div>
-                </div> 
+                </div>
 
 
-                <div class="image-container bg-color-blue">
-                    <img src="images/screenshots/standalone.png" />
-                    <div class=overlay>
+                <div class="row border-top image-container full-size">
+                    <img src="images/screenshots/standalone.png" class="span12" />
+                    <div class="overlay">
                         StandAlone application
                     </div>
-                </div> 
+                </div>
 
-
-              </div>
-          </div>
-      </div>
-  
-    <div class="page">
-        <div class="nav-bar">
-            <div class="nav-bar-inner padding10">
-                <span class="element">
-                    Outlook Finder Plugin gui maintained by Fruitfactory. Published with <a href="http://pages.github.com">GitHub Pages</a>
-                </span>
             </div>
         </div>
-    </div>
-    
+        <div class="page-footer bg-cyan">
+            <div class="page-footer-content">
+                Outlook Finder Plugin gui maintained by Fruitfactory. Published with <a href="http://pages.github.com">GitHub Pages</a>
+            </div>
+        </div>
 
-  </body>
+    </div>
+    <!--page end-->
+</body>
 </html>
