updated: - some changes;

--- a/buyversion.html
+++ b/buyversion.html
@@ -29,7 +29,7 @@
         <div class="grid container">
             <div class="row">
                 <div class="bg-white">
-                    <div class="padding20 introduce bg-amber">
+                    <div class="padding20 introduce bg-cyan">
                         <h1 class="ntm text-center fg-white">Outlook Finder</h1>
                     </div>
                 </div>
