--- a/WSPreview/Html/Error.htm
+++ b/WSPreview/Html/Error.htm
@@ -3,8 +3,8 @@
 	<head>
 		<title></title>
 	</head>
-	<body style="background-color: #FFFFCA;">
-	    <div style="display: table; vertical-align: middle;text-align: center; font-family: calibri; font-weight: 400; color: #FF0000; text-transform: uppercase; font-size: x-large; margin-top: 25%; margin-bottom: 25%;">
+	<body >
+	    <div style="display: table; vertical-align: middle;text-align: center; font-family: calibri; font-weight: 40; color: #FF0000; text-transform: uppercase; margin-top: 10%; margin-bottom: 10%;">
 	        <div style="text-align: left">Error:</div>
 	        <hr/>
 	        <div>
