--- a/WSPreview/Html/NoPreview.htm
+++ b/WSPreview/Html/NoPreview.htm
@@ -2,22 +2,9 @@
 <html>
 	<head>
 	    <title></title>
-	    <style>
-    	    
-    	    body span {
-    	        font-size: 14px;
-    	    }
-    	    .style1
-            {
-                width: 529px;
-            }
-            td {
-                width: 50%;
-            }
-    	</style>
 	</head>
-    <body style="background-color: #FFFFCA;">
-        <div style="display: table; vertical-align: middle;text-align: center; font-family: calibri; font-weight: 400; color: #FF0000; text-transform: uppercase; font-size: x-large; margin-top: 25%; margin-bottom: 25%;">
+    <body >
+        <div style="display: table; vertical-align: middle;text-align: center; font-family: calibri; font-weight: 40; color: #FF0000; text-transform: uppercase; margin-top: 10%; margin-bottom: 10%;">
                         Can't show preview, click open to see the content: replace
         </div> 
     </body>
