--- a/WSUI.Infrastructure/Html/template.html
+++ b/WSUI.Infrastructure/Html/template.html
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <head>
 </head>
 
-<body bgcolor="#F2F2F2" lang=EN-US link=blue vlink=purple >
+<body lang=EN-US link=blue vlink=purple >
 
 <div >
     <p>&nbsp;</p>
@@ -21,7 +21,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 font-family:"Calibri","sans-serif";mso-fareast-font-family:"Times New Roman"'>From: </span></b></a><span
 style='mso-bookmark:_MailOriginal'><span style='font-size:11.0pt;font-family:
 "Calibri","sans-serif";mso-fareast-font-family:"Times New Roman"'>{From}<br>
-<b>Sent :</b>{Sent}<br>
+<b>Sent: </b>{Sent}<br>
 <b>To: </b> {To}<br>
 <b>Subject: </b> {Subject}</span></span></p>
 
